--- a/index.html
+++ b/index.html
@@ -3,33 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spk Frontend Workshop 2022</title>
+    <title>HTML SPK Demo</title>
 </head>
 <body>
     <main>
         <header>
-            <!-- TODO: #1 -->
-            <!-- Take a look at the result.png file -->
-            <!-- TODO: #2 -->
-            <h1>Welcome to our Favorite foods 🍕 🍲 🍣 🍝 🥩 🍜 </h1>
-            <div></div>
-            <!-- Create a <p> inside a <div>  for "Deal of the day"  -->
-            <!-- TODO: #3  -->
-            <!-- Create a "Deal of the week" text. Do the same as TODO #2 -->
+            <h1>Welcome to our Favorite foods 🥦 🌮 🍖 </h1>
+            <hr>
+            <div>
+                <div>
+                    <p>Deal of the day</p>
+                </div>
+                <div>
+                    <p>Deal of the week</p>
+                </div>
+            </div>
         </header>
+        <hr>
         <section>
-            <!-- TODO: #4 -->
-            <!-- Use <h1> html attribute for header "Welcome to CSS SPK Demo" -->
-            <!-- TODO: #5 -->
-            <!-- Use <ol> and <li> html attributes for list of dishes -->
+            <ol>
+                <h1>Welcome to HTML/CSS SPK Demo</h1>
+                <li>Broccoli</li>
+                <li>Taco</li>
+                <li>Meat</li>
+            </ol>
         </section>
+        <hr>
         <footer>
-            <!-- TODO: #6 -->
-            <!-- Use <h1> html attribute for header "Contributors" -->
-            <!-- TODO: #7 -->
-            <!-- Use <ul> and <li> html attributes for list of contributors -->
-            <!-- TODO: #8 -->
-            <!-- Use <h2> html attribute for "😋 Our restaurant needs more dishes 😋" -->
+            <h1>Contributors 💚</h1>
+            <ul>
+                <li>Emilie</li>
+                <li>Henrik</li>
+                <li>Kristian</li>
+                <li>Halil</li>
+                <li>Hamse</li>
+                <li>Arne</li>
+            </ul>
+            <hr>
+            <div>
+                <h2>😋 Our restaurant needs more dishes 😋 </h2>
+            </div>
         </footer>
     </main>
 </body>
