--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS SPK Demo</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <main>
         <header>
-            <h1>Welcome to our Favorite foods 🍕 🦌️ 🌮️ 🍗️ 🐻️ 🍲 🥟️ 🍣 🥩</h1>
+            <h1>Welcome to our Favorite foods 🍕 🥦 🥩 🍖</h1>
             <hr>
             <div class="container">
                 <div class="container-item">
@@ -26,11 +27,11 @@
             <ol>
                 <li id="deal-of-the-week">Broccoli</li>
                 <li class="deal-of-the-day">Taco</li>
-                <li class="day-background">Black Beans Burritos</li>
+                <li class="day-background">Pabellon Criollo</li>
                 <li class="week-background">Tandoorikylling</li>
-                <li class="day-background">Black Beans Burritos</li>
+                <li class="day-background">Meat</li>
             </ol>
-        </section>git push --set-upstream origin 1-html-demo-end
+        </section>
         <hr>
         <footer>
             <h1>Contributors 💚</h1>
@@ -41,6 +42,7 @@
                 <li>Halil</li>
                 <li>Hamse</li>
                 <li>Arne</li>
+                <li>Alejandro</li>
             </ul>
             <hr>
             <div id="alert">
