--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
         </header>
         <section>
             <!-- TODO: #4 -->
-            <!-- Use <h1> html attribute for header "Welcome to CSS SPK Demo" -->
+            <!-- Use <h1> html elements for header "Welcome to CSS SPK Demo" -->
             <!-- TODO: #5 -->
-            <!-- Use <ol> and <li> html attributes for list of dishes -->
+            <!-- Use <ol> and <li> html elementss for list of dishes -->
         </section>
         <footer>
             <!-- TODO: #6 -->
-            <!-- Use <h1> html attribute for header "Contributors" -->
+            <!-- Use <h1> html elements for header "Contributors" -->
             <!-- TODO: #7 -->
-            <!-- Use <ul> and <li> html attributes for list of contributors -->
+            <!-- Use <ul> and <li> html elementss for list of contributors -->
             <!-- TODO: #8 -->
             <!-- Use <h2> html attribute for "😋 Our restaurant needs more dishes 😋" -->
         </footer>
