--- a/index.html
+++ b/index.html
@@ -13,40 +13,25 @@
     <title>Velkommen til Frontend Del II</title>
 </head>
 <body>
-	<h1>Open your console (ctrl + shift + i )</h1>
+    <div class="color-box"></div>
+    <input class="color-input" placeholder="Type a color here!" />
+    <button class="submit-button">Submit</button>
+
     <script>
-		// TASK: Given 5 books, create a function that checks if a book does not contain the word "the"
-		// and push it to a favorite books array.
+		console.log("🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥")
+		console.log("WELCOME TO DEMO #5 - You've come a long way! ")
+		console.log("🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥")
+		const input = document.querySelector(".color-input");
+		const paragraph = document.querySelector(".color-box");
+		const button = document.querySelector(".submit-button");
 
-		var favoriteBooks = [];
+		input.addEventListener("change", function () {
+			paragraph.style.backgroundColor = input.value;
+		});
 
-        // TODO 1: define addFavoriteBook(..) function
-		const addFavoriteBook = (bookName) => {
-			if (!bookName.includes("The")) {
-				favoriteBooks.push(bookName);
-			}
-		};
-
-		// TODO 2: define printFavoriteBooks() function
-		// hint: This function prints only the favorite books
-		const printFavoriteBooks = () => {
-			console.log("Favorite Books: ")
-			for (let bookName of favoriteBooks) {
-				console.log(bookName);
-			}
-		};
-
-
-		addFavoriteBook("The Girl with the Dragon Tattoo");
-		addFavoriteBook("Beatles");
-		addFavoriteBook("Snowman");
-		addFavoriteBook("The Da Vinci Code");
-		addFavoriteBook("Emotional Intelligence");
-
-		// TODO 3: Call printFavoriteBooks function
-		printFavoriteBooks();
-
+		button.addEventListener("click", function () {
+			paragraph.style.backgroundColor = input.value;
+		});
     </script>
-
 </body>
 </html>
