--- a/index.html
+++ b/index.html
@@ -23,21 +23,14 @@
         <section>
             <ol>
                 <h1>Welcome to HTML/CSS SPK Demo</h1>
-                <li>Broccoli</li>
-                <li>Taco</li>
-                <li>Meat</li>
+                <li>Pabellon Criollo</li>
             </ol>
         </section>
         <hr>
         <footer>
             <h1>Contributors 💚</h1>
             <ul>
-                <li>Emilie</li>
-                <li>Henrik</li>
-                <li>Kristian</li>
-                <li>Halil</li>
-                <li>Hamse</li>
-                <li>Arne</li>
+                <li>Alejandro</li>
             </ul>
             <hr>
             <div>
