--- a/index.html
+++ b/index.html
@@ -10,26 +10,29 @@
         <header>
             <!-- TODO: #1 -->
             <!-- Take a look at the result.png file -->
-            <!-- TODO: #2 -->
             <h1>Welcome to our Favorite foods 🍕 🍲 🍣 🍝 🥩 🍜 </h1>
-            <div></div>
+            <hr>
+            <div>
+            <!-- TODO: #2 -->
             <!-- Create a <p> inside a <div>  for "Deal of the day"  -->
             <!-- TODO: #3  -->
             <!-- Create a "Deal of the week" text. Do the same as TODO #2 -->
+            </div>
         </header>
+        <hr>
         <section>
             <!-- TODO: #4 -->
-            <!-- Use <h1> html elements for header "Welcome to CSS SPK Demo" -->
+            <!-- Create a <h1> html element for header "Welcome to CSS SPK Demo" -->
             <!-- TODO: #5 -->
-            <!-- Use <ol> and <li> html elementss for list of dishes -->
+            <!-- Create a <ol> and <li> html elementss for list of dishes -->
         </section>
         <footer>
             <!-- TODO: #6 -->
-            <!-- Use <h1> html elements for header "Contributors" -->
+            <!-- Create a <h1> html element for header "Contributors" -->
             <!-- TODO: #7 -->
-            <!-- Use <ul> and <li> html elementss for list of contributors -->
+            <!-- Create a <ul> and <li> html elements for list of contributors -->
             <!-- TODO: #8 -->
-            <!-- Use <h2> html attribute for "😋 Our restaurant needs more dishes 😋" -->
+            <!-- Create a <h2> html element for "😋 Our restaurant needs more dishes 😋" -->
         </footer>
     </main>
 </body>
