fix: legger til resources

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 		// and push it to a favorite books array.
 		// another hint: You can use console.log("WHATEVER YOU WANT TO SEE") to print
 		// on the browser. For instance, console.log(favoriteBooks) prints your favorite books.
+		// Resources: This is how you create a function in Javascript https://www.w3schools.com/js/js_function_definition.asp
 
 		// TODO 2: define printFavoriteBooks() function that receives no parameters
 		// hint: This function prints only the favorite books
