fix: legger til for loop link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 		// TODO 2: define printFavoriteBooks() function that receives no parameters
 		// hint: This function prints only the favorite books
-		// hint: Use the "for { let ... of ... } loop"
+		// hint: Use the "for { let ... of ... } loop -> https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/for...of"
 
 		addFavoriteBook("The Girl with the Dragon Tattoo");
 		addFavoriteBook("Beatles");
