--- a/index.html
+++ b/index.html
@@ -14,25 +14,40 @@
             <hr>
             <div>
             <!-- TODO: #2 -->
-            <!-- Create a <p> inside a <div>  for "Deal of the day"  -->
-            <!-- TODO: #3  -->
-            <!-- Create a "Deal of the week" text. Do the same as TODO #2 -->
+            <p>Deal of the day</p>
+            <p>Deal of the week</p>
             </div>
         </header>
         <hr>
         <section>
             <!-- TODO: #4 -->
             <!-- Create a <h1> html element for header "Welcome to CSS SPK Demo" -->
+            <h1>Welcome to CSS SPK Demo </h1>
+                
             <!-- TODO: #5 -->
-            <!-- Create a <ol> and <li> html elementss for list of dishes -->
+            <ol> 
+                <li>Com tam</li>
+                <li>Banh hoi</li>
+                <li>Pad thai</li>
+            </ol>
         </section>
+            <hr>
+
         <footer>
             <!-- TODO: #6 -->
             <!-- Create a <h1> html element for header "Contributors" -->
+                <h1>Contributors</h1>
             <!-- TODO: #7 -->
             <!-- Create a <ul> and <li> html elements for list of contributors -->
+                <ul>
+                    <li>vunguye1</li>
+                    <li>tinitn</li>
+                </ul>
+            <hr>
+
             <!-- TODO: #8 -->
             <!-- Create a <h2> html element for "😋 Our restaurant needs more dishes 😋" -->
+                <h2>😋 Our restaurant needs more dishes 😋</h2>
         </footer>
     </main>
 </body>
