Finished first task

--- a/index.html
+++ b/index.html
@@ -10,29 +10,46 @@
         <header>
             <!-- TODO: #1 -->
             <!-- Take a look at the result.png file -->
-            <h1>Welcome to our Favorite foods 🍕 🍲 🍣 🍝 🥩 🍜 </h1>
+            <h1>Welcome to our Favorite foods 🥦🌮🍖 </h1>
             <hr>
             <div>
-            <!-- TODO: #2 -->
-            <!-- Create a <p> inside a <div>  for "Deal of the day"  -->
-            <!-- TODO: #3  -->
-            <!-- Create a "Deal of the week" text. Do the same as TODO #2 -->
+                <!-- TODO: #2 -->
+                <!-- Create a <p> inside a <div>  for "Deal of the day"  -->
+                <p>Deal of the day</p>
+                <!-- TODO: #3  -->
+                <!-- Create a "Deal of the week" text. Do the same as TODO #2 -->
+                <p>Deal of the week</p>
             </div>
         </header>
         <hr>
         <section>
             <!-- TODO: #4 -->
             <!-- Create a <h1> html element for header "Welcome to CSS SPK Demo" -->
+            <h1>Welcome to the HTML/CSS SPK Demo</h1>
             <!-- TODO: #5 -->
             <!-- Create a <ol> and <li> html elementss for list of dishes -->
+            <ol>
+                <li>Pabellon Criollo</li>
+                <li>Sushi</li>
+                <li>Pizza</li>
+                <li>Steinsopp</li>
+            </ol>
         </section>
         <footer>
             <!-- TODO: #6 -->
             <!-- Create a <h1> html element for header "Contributors" -->
+            <h1>Contributors 💚</h1>
             <!-- TODO: #7 -->
             <!-- Create a <ul> and <li> html elements for list of contributors -->
+            <ul>
+                <li>Alejandro</li>
+                <li>Triera Gashi</li>
+                <li>Sander</li>
+                <li>Lelia</li>
+            </ul>
             <!-- TODO: #8 -->
             <!-- Create a <h2> html element for "😋 Our restaurant needs more dishes 😋" -->
+            <h2>😋 Our restaurant needs more dishes 😋</h2>
         </footer>
     </main>
 </body>
