--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <ol>
                     <li>Pizza</li>
                     <li>Pasta</li>
-                    <li>Sushi</li>
+                    <li>Sushi🍣</li>
                 </ol>
         </section>
         <footer>
@@ -43,12 +43,12 @@
             <!-- TODO: #7 -->
             <!-- Create a <ul> and <li> html elements for list of contributors -->
                 <ul>
-                    <li>Lelia</li>
-                    <li>Triera</li>
+                    <li>Lelia🥦</li>
+                    <li>Triera🍣</li>
                 </ul>
             <!-- TODO: #8 -->
             <!-- Create a <h2> html element for "😋 Our restaurant needs more dishes 😋" -->
-                <h2>Our restaurant needs more dishes</h2>
+                <h2>😋 Our restaurant needs more dishes😋</h2>
         </footer>
     </main>
 </body>
