--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 
+    <h1>Spk Frontend Workshop 2024</h1>
+    <h2>Inspect the console to see the result</h2>
     <script src="dist/index.js"></script>
 
 </body>
